# GNL-Generate-Netlist

./: CMakeLists.txt  README  README.md  argread.cpp  config.sh  modules.cpp  modules.h  test4vpr.blif  write.cpp
benchmarks_blif/koios/: attention_layer.blif.rent  bnn.blif.rent  brainwave_like_float_small.blif.rent  clstm_like_small.blif.rent  conv_layer.blif.rent  conv_layer_hls.blif.rent  koios_vpr_data.csv
benchmarks_blif/koios_test/: .~lock.data.csv#  data.csv  test-tl-ml.csv
examples/: large.gnl  multilevel.gnl  small.gnl  strange.gnl  test4vpr.gnl
post-process/: netlist2rent.py  post_process.sh  rent2viz.py  runvpr.sh
post-process/graphfiles/: hg.part.2  hg0  hg1
post_process/: compvpr.py  post_process.sh  readvpr.py  readvpr_bm.py  rent2viz.py  runvpr.sh
post_process/graphfiles/: hg0  hg1
post_process/rent_norm/: nl2norm_rent.py  rent_norm2viz.py
rent_sweep/: .sweep.sh.swo  half_rent.hnl  post_process.sh  readvpr.py  sweep.sh
rent_sweep/five_elements/: rent_exp_0.30.blif  rent_exp_0.30.blif.rent  rent_exp_0.30.gnl  rent_exp_0.32.blif  rent_exp_0.32.blif.rent  rent_exp_0.32.gnl  rent_exp_0.34.blif  rent_exp_0.34.blif.rent  rent_exp_0.34.gnl  rent_exp_0.36.blif  rent_exp_0.36.blif.rent  rent_exp_0.36.gnl  rent_exp_0.38.blif  rent_exp_0.38.blif.rent  rent_exp_0.38.gnl  rent_exp_0.40.blif  rent_exp_0.40.blif.rent  rent_exp_0.40.gnl  rent_exp_0.42.blif  rent_exp_0.42.blif.rent  rent_exp_0.42.gnl  rent_exp_0.44.blif  rent_exp_0.44.blif.rent  rent_exp_0.44.gnl  rent_exp_0.46.blif  rent_exp_0.46.blif.rent  rent_exp_0.46.gnl  rent_exp_0.48.blif  (+77 more)
(+1533 files in other folders)
